  ``urllib.urlencode``) which can handle Unicode keys and values in
  parameters to the ``query`` argument.

Deprecations
------------

- The ``model_url`` function has been moved from
  ``repoze.bfg.traversal`` into ``repoze.bfg.url``.  It can still
  be imported from ``repoze.bfg.traversal`` but an import from
  ``repoze.bfg.traversal`` will emit a DeprecationWarning.

Features
--------

- A ``static`` helper class was added to the ``repoze.bfg.views``
  module.  Instances of this class are willing to act as BFG views
  which return static resources using files on disk.  See the
  ``repoze.bfg.view`` docs for more info.

- The ``repoze.bfg.url.model_url`` API (nee'
  ``repoze.bfg.traversal.model_url``) now accepts and honors a
  keyword argument named ``query``.  The value of this argument
  will be used to compose a query string, which will be attached to
  the generated URL before it is returned.  See the API docs (in
  the docs directory or `on the web
  <http://static.repoze.org/bfgdocs>`_) for more information.

0.6 (2008-12-26)
================

Backwards Incompatibilities
---------------------------

- Rather than prepare the "stock" implementations of the ZCML directives
  from the ``zope.configuration`` package for use under ``repoze.bfg``,
  ``repoze.bfg`` now makes available the implementations of directives
  from the ``repoze.zcml`` package (see http://static.repoze.org/zcmldocs).
  As a result, the ``repoze.bfg`` package now depends on the
  ``repoze.zcml`` package, and no longer depends directly on the
  ``zope.component``, ``zope.configuration``, ``zope.interface``, or
  ``zope.proxy`` packages.

  The primary reason for this change is to enable us to eventually reduce
  the number of inappropriate ``repoze.bfg`` Zope package dependencies,
  as well as to shed features of dependent package directives that don't
  make sense for ``repoze.bfg``.

  Note that currently the set of requirements necessary to use bfg has not