@@ -1,0 +1,11 @@
+<configure xmlns="http://namespaces.repoze.org/bfg">
+
+  <!-- this must be included for the view declarations to work -->
+  <include package="repoze.bfg.includes" />
+
+  <view
+     for=".models.MyApp"
+     view=".views.my_view"
+     />
+
+</configure>
