@@ -1,0 +1,7 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:tal="http://xml.zope.org/namespaces/tal">
+<head></head>
+<body>
+  <h1>Welcome to ${project}</h1>
+</body>
+</html>
