@@ -1,0 +1,14 @@
+[DEFAULT]
+debug = true
+
+[app:main]
+use = egg:{{project}}#app
+reload_templates = true
+debug_authorization = false
+debug_notfound = false
+zodb_uri = file://%(here)s/Data.fs?connection_cache_size=20000
+
+[server:main]
+use = egg:Paste#http
+host = 0.0.0.0
+port = 6543
